--- a/style.css
+++ b/style.css
@@ -1,57 +1,37 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|Roboto:300,400,700&display=swap');
-/*
-    font-family: 'Roboto Condensed', sans-serif;
-    font-family: 'Roboto', sans-serif;   
-*/
-/* Globals */
-/* Globals */
-/* Globals */
-body {
+body{
     font-family: 'Roboto Condensed', sans-serif;
     background-color: #22262A;
 }
-a:link,
-a:visited {
+a:link, a:visited{
     color: #ED462F;
     text-decoration: none;
     display: inline-block;
     transition: all 0.2s;
 }
-a:hover,
-a:active {
+a:hover, a:active{
     color: white;
     background-color: #ED462F;
     box-shadow: 0 1rem 2rem rgba(black, .4);
     transform: rotate(5deg) scale(1.2);
     padding: 2px;
-    /* -webkit-transform: rotate(5deg) scale(1.3); */
 }
-/* Character Search Page */
-/* Character Search Page */
-/* Character Search Page */
-.jumbotron {
+.jumbotron{
     background-color: #151515;
 }
-.header-main-title {
+.header-main-title{
     color: #fff;
 }
-.character-search-box, .search-character-button {
+.character-search-box, .search-character-button{
     border-radius: 0;
 }
-.search-character-button {
+.search-character-button{
     background-color: #ED462F;
 }
-#characterMainTitle, #comicMainTitle {
+#characterMainTitle, #comicMainTitle{
     color: #FFFFFF;
 }
-.card {
+.card{
     border:none;
     border-radius: 2px;
 }
-/* Single Comic Page */
-/* Single Comic Page */
-/* Single Comic Page */
-/* Single Comic Page */
-/* .single-comice__container {
-    background-color: #22262A;
-} */
